--- a/src/fxml/ShowTraceInSystem.fxml
+++ b/src/fxml/ShowTraceInSystem.fxml
@@ -7,7 +7,6 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.Spinner?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextField?>
@@ -26,70 +25,97 @@
          <items>
             <VBox minHeight="10.0" minWidth="10.0" prefHeight="709.0" prefWidth="322.0" spacing="5.0">
                <children>
-                  <VBox spacing="5.0">
-                     <children>
-                        <VBox prefHeight="135.0" prefWidth="348.0" spacing="3.0">
+                  <SplitPane dividerPositions="0.3113342898134864, 0.569583931133429" orientation="VERTICAL" prefHeight="699.0" prefWidth="209.0">
+                    <items>
+                        <VBox prefHeight="223.0" prefWidth="207.0" spacing="5.0">
                            <children>
-                              <HBox alignment="CENTER_LEFT" spacing="3.0">
+                              <Label text="Traces">
+                                 <font>
+                                    <Font name="System Bold" size="14.0" />
+                                 </font>
+                              </Label>
+                              <VBox prefHeight="135.0" prefWidth="348.0" spacing="3.0">
                                  <children>
-                                    <Label text="Show Trace">
-                                       <font>
-                                          <Font size="14.0" />
-                                       </font></Label>
-                                    <ComboBox fx:id="comboBoxAddedTraces" prefHeight="25.0" prefWidth="112.0" />
+                                    <HBox alignment="CENTER_LEFT" spacing="3.0">
+                                       <children>
+                                          <Label text="Show">
+                                             <font>
+                                                <Font size="13.0" />
+                                             </font>
+                                          </Label>
+                                          <ComboBox fx:id="comboBoxAddedTraces" prefHeight="25.0" prefWidth="112.0" />
+                                       </children>
+                                    </HBox>
+                                    <ScrollPane fitToWidth="true" prefHeight="101.0" prefWidth="348.0" style="-fx-background-color: white;">
+                                       <content>
+                                          <FlowPane fx:id="flowPaneTraceDetails" hgap="3.0" prefHeight="99.0" prefWidth="346.0" vgap="3.0" />
+                                       </content>
+                                    </ScrollPane>
                                  </children>
-                              </HBox>
-                              <ScrollPane fitToWidth="true" prefHeight="101.0" prefWidth="348.0" style="-fx-background-color: white;">
+                              </VBox>
+                              <VBox minWidth="10.0" prefHeight="51.0" prefWidth="317.0">
+                                 <children>
+                                    <CheckBox fx:id="checkBoxHideActionsNames" mnemonicParsing="false" prefHeight="17.0" prefWidth="116.0" text="hide action name" />
+                                    <CheckBox fx:id="checkboxShowOnlySelectedTrace" mnemonicParsing="false" text="Only selected trace" />
+                                    <CheckBox fx:id="checkboxShowOccurrence" mnemonicParsing="false" text="Occurrence %">
+                                       <tooltip>
+                                          <Tooltip text="Shows the occurrence percentage of the states and actions" />
+                                       </tooltip>
+                                    </CheckBox>
+                                 </children>
+                              </VBox>
+                           </children>
+                           <padding>
+                              <Insets left="3.0" top="5.0" />
+                           </padding>
+                        </VBox>
+                        <VBox prefHeight="133.0" prefWidth="207.0" spacing="5.0">
+                           <children>
+                              <Label text="Actions">
+                                 <font>
+                                    <Font name="System Bold" size="14.0" />
+                                 </font>
+                              </Label>
+                              <ScrollPane fitToWidth="true" prefHeight="138.0" prefWidth="207.0" style="-fx-background-color: white;">
                                  <content>
-                                    <FlowPane fx:id="flowPaneTraceDetails" hgap="3.0" prefHeight="99.0" prefWidth="346.0" vgap="3.0" />
+                                    <FlowPane fx:id="flowPaneActions" hgap="3.0" prefHeight="136.0" prefWidth="205.0" vgap="3.0" />
                                  </content>
                               </ScrollPane>
                            </children>
+                           <padding>
+                              <Insets left="3.0" top="5.0" />
+                           </padding>
                         </VBox>
-                        <VBox minWidth="10.0" prefHeight="51.0" prefWidth="317.0">
+                        <VBox prefWidth="362.0" spacing="5.0">
                            <children>
-                              <CheckBox fx:id="checkBoxHideActionsNames" mnemonicParsing="false" prefHeight="17.0" prefWidth="116.0" text="hide action name" />
-                              <CheckBox fx:id="checkboxShowOnlySelectedTrace" mnemonicParsing="false" text="Only selected trace" />
-                              <CheckBox fx:id="checkboxShowOccurrence" mnemonicParsing="false" text="Occurrence %">
-                                 <tooltip>
-                                    <Tooltip text="Shows the occurrence percentage of the states and actions" />
-                                 </tooltip>
-                              </CheckBox>
+                              <Label text="Entities">
+                                 <font>
+                                    <Font name="System Bold" size="14.0" />
+                                 </font>
+                              </Label>
+                              <HBox alignment="CENTER_LEFT" spacing="3.0">
+                                 <children>
+                                    <Label text="Show">
+                                       <font>
+                                          <Font size="13.0" />
+                                       </font>
+                                    </Label>
+                                    <Button fx:id="btnShowEntities" mnemonicParsing="false" onAction="#showEntities" text="Top" />
+                                    <Spinner fx:id="spinnerTopK" editable="true" prefHeight="25.0" prefWidth="67.0" />
+                                 </children>
+                              </HBox>
+                              <ScrollPane fx:id="scrollPaneEntities" fitToWidth="true" prefHeight="167.0" prefWidth="207.0" style="-fx-background-color: white;">
+                                 <content>
+                                    <FlowPane fx:id="flowPaneEntities" hgap="3.0" prefHeight="163.0" prefWidth="205.0" vgap="3.0" />
+                                 </content>
+                              </ScrollPane>
                            </children>
+                           <padding>
+                              <Insets left="3.0" top="5.0" />
+                           </padding>
                         </VBox>
-                     </children>
-                  </VBox>
-                  <Separator prefWidth="200.0" />
-                  <VBox spacing="3.0">
-                     <children>
-                        <Label text="Actions">
-                           <font>
-                              <Font size="14.0" />
-                           </font>
-                        </Label>
-                        <ScrollPane fitToWidth="true" prefHeight="101.0" prefWidth="348.0" style="-fx-background-color: white;">
-                           <content>
-                              <FlowPane fx:id="flowPaneActions" hgap="3.0" prefHeight="99.0" prefWidth="346.0" vgap="3.0" />
-                           </content>
-                        </ScrollPane>
-                     </children>
-                  </VBox>
-                  <Separator prefWidth="370.0" />
-                  <VBox prefHeight="159.0" prefWidth="362.0" spacing="5.0">
-                     <children>
-                        <HBox spacing="3.0">
-                           <children>
-                              <Button fx:id="btnShowEntities" mnemonicParsing="false" onAction="#showEntities" text="Show entities" />
-                              <Spinner fx:id="spinnerTopK" editable="true" prefHeight="25.0" prefWidth="102.0" />
-                           </children>
-                        </HBox>
-                        <ScrollPane fx:id="scrollPaneEntities" fitToWidth="true" prefHeight="135.0" prefWidth="345.0" style="-fx-background-color: white;">
-                           <content>
-                              <FlowPane fx:id="flowPaneEntities" hgap="3.0" prefHeight="126.0" prefWidth="346.0" vgap="3.0" />
-                           </content>
-                        </ScrollPane>
-                     </children>
-                  </VBox>
+                    </items>
+                  </SplitPane>
                </children>
                <padding>
                   <Insets left="3.0" right="3.0" top="3.0" />
@@ -101,6 +127,9 @@
                </content>
             </ScrollPane>
          </items>
+         <BorderPane.margin>
+            <Insets top="5.0" />
+         </BorderPane.margin>
       </SplitPane>
    </center>
    <top>
