--- a/src/fxml/ShowTraceInSystem.fxml
+++ b/src/fxml/ShowTraceInSystem.fxml
@@ -174,6 +174,7 @@
                         <Label text="contains" />
                         <TextField fx:id="textFieldContainsStateSearch" prefHeight="25.0" prefWidth="100.0" promptText="e.g., 1,2,3" />
                         <Button fx:id="btnSearchTraces" mnemonicParsing="false" onAction="#searchTraces" text="search traces" />
+                        <ProgressIndicator fx:id="progressIndicatorSearchTraces" prefHeight="6.0" prefWidth="41.0" visible="false" />
                      </children>
                   </HBox>
                </children>
