--- a/bin/fxml/TraceViewer.fxml
+++ b/bin/fxml/TraceViewer.fxml
@@ -50,14 +50,7 @@
                                              <children>
                                                 <TextField fx:id="textFieldSystemFile" layoutX="-4.0" prefHeight="34.0" prefWidth="285.0" promptText="traces file (*.json)" />
                                                 <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="29.0" layoutX="244.0" layoutY="2.0" stroke="BLACK" strokeType="INSIDE" style="-fx-stroke-width: 0;" width="34.0" />
-                                                <ImageView fx:id="imgSelectSystemFile" fitHeight="24.0" fitWidth="24.0" layoutX="252.0" layoutY="4.0" onMouseClicked="#selectTracesFile" pickOnBounds="true" preserveRatio="true">
-                                                   <image>
-                                                      <Image url="@../../bin/resources/images/folder.png" />
-                                                   </image>
-                                                   <cursor>
-                                                      <Cursor fx:constant="HAND" />
-                                                   </cursor>
-                                                </ImageView>
+                                                <Button alignment="TOP_CENTER" contentDisplay="CENTER" layoutX="249.0" layoutY="4.0" mnemonicParsing="false" onAction="#selectTracesFile" prefHeight="25.0" prefWidth="27.0" text="..." textAlignment="CENTER" />
                                              </children>
                                           </AnchorPane>
                                           <AnchorPane prefHeight="24.0" prefWidth="24.0">
