--- a/src/fxml/task_cell.fxml
+++ b/src/fxml/task_cell.fxml
@@ -1,36 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane fx:id="rootPane" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="rootPane" prefHeight="68.0" prefWidth="862.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <VBox fx:id="vboxMain">
+      <VBox fx:id="vboxMain" prefWidth="852.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
          <children>
-            <SplitPane fx:id="splitPaneTrace" dividerPositions="0.08487654320987655" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="45.0" prefWidth="720.0">
-               <items>
-                  <BorderPane maxWidth="150.0" prefHeight="35.0" prefWidth="52.0">
-                     <center>
-                        <Label fx:id="lblTraceID" alignment="CENTER" prefHeight="27.0" prefWidth="57.0" BorderPane.alignment="CENTER" />
-                     </center>
-                  </BorderPane>
-                  <ScrollPane fx:id="scrollPaneTrace" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" opacity="0.55" vbarPolicy="NEVER">
+            <HBox fx:id="hboxTrace" prefHeight="60.0">
+               <children>
+                  <Label fx:id="lblTraceID" alignment="CENTER" prefHeight="17.0" prefWidth="109.0">
+                     <padding>
+                        <Insets left="2.0" />
+                     </padding>
+                  </Label>
+                  <ScrollPane fx:id="scrollPaneTrace" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" opacity="0.55" prefHeight="58.0" prefWidth="849.0" vbarPolicy="NEVER">
                      <content>
-                        <HBox fx:id="hbox" alignment="CENTER_LEFT" prefHeight="43.0" />
+                        <HBox fx:id="hbox" alignment="CENTER_LEFT" />
                      </content>
                   </ScrollPane>
-               </items>
-            </SplitPane>
+               </children>
+            </HBox>
          </children>
       </VBox>
-      <HBox fx:id="hboxOptions" alignment="CENTER_RIGHT" layoutX="566.0" layoutY="8.0" prefHeight="30.0" prefWidth="86.0" spacing="5.0" visible="false" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="8.0">
+      <HBox fx:id="hboxOptions" alignment="CENTER_RIGHT" layoutX="566.0" layoutY="8.0" prefHeight="30.0" prefWidth="86.0" spacing="5.0" visible="false" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="10.0">
          <children>
             <MenuButton fx:id="menuButtonOptions" alignment="TOP_LEFT" mnemonicParsing="false" text="Options">
               <items>
