--- a/src/fxml/ShowTraceInSystem.fxml
+++ b/src/fxml/ShowTraceInSystem.fxml
@@ -24,9 +24,9 @@
    <center>
       <SplitPane fx:id="splitPaneTraceView" dividerPositions="0.17091660923501034">
          <items>
-            <VBox minHeight="10.0" minWidth="10.0" prefHeight="709.0" prefWidth="322.0" spacing="5.0">
+            <VBox minHeight="10.0" minWidth="10.0" prefHeight="693.0" prefWidth="245.0">
                <children>
-                  <SplitPane fx:id="splitPaneTraceDetails" dividerPositions="0.4031563845050215, 0.6513629842180775" orientation="VERTICAL" prefHeight="699.0" prefWidth="209.0">
+                  <SplitPane fx:id="splitPaneTraceDetails" dividerPositions="0.4031339031339031, 0.6709401709401709" orientation="VERTICAL" prefHeight="706.0" prefWidth="245.0">
                     <items>
                         <VBox prefHeight="266.0" prefWidth="237.0" spacing="5.0">
                            <children>
@@ -50,7 +50,7 @@
                                              </font>
                                           </Label>
                                           <ComboBox fx:id="comboBoxAddedTraces" prefHeight="25.0" prefWidth="112.0" />
-                                          <Button mnemonicParsing="false" onAction="#showCausalityChain" prefHeight="25.0" prefWidth="81.0" text="analyse">
+                                          <Button mnemonicParsing="false" onAction="#showCausalityChain" prefHeight="25.0" prefWidth="86.0" text="analyse">
                                              <tooltip>
                                                 <Tooltip text="Finds states matching incident pattern conditions, and also finds causal dependency. Shows causal dependency between actions. Causal dependency is defined in terms of counterfactual account, i.e.  act1 is causally dependent on act2 iff if act2 were not to occur, then act1 would not had occurred" />
                                              </tooltip>
@@ -115,7 +115,7 @@
                               <Insets left="3.0" top="5.0" />
                            </padding>
                         </VBox>
-                        <VBox prefWidth="362.0" spacing="5.0">
+                        <VBox prefHeight="255.0" prefWidth="243.0" spacing="5.0">
                            <children>
                               <Label text="Entities">
                                  <font>
@@ -146,9 +146,6 @@
                     </items>
                   </SplitPane>
                </children>
-               <padding>
-                  <Insets left="3.0" right="3.0" top="3.0" />
-               </padding>
             </VBox>
             <ScrollPane fx:id="scrollPaneTraceViewer" fitToHeight="true" fitToWidth="true" prefHeight="550.0" prefWidth="1100.0">
                <content>
